<resources>
    <string name="app_name">KakshaSignUp</string>
    <string name="create_account">Create Account</string>
    <string name="alam_lawsom_example_com">alam.lawsom@example.com</string>
    <string name="jone_cooper">Jone Cooper</string>
    <string name="use_phone_number">USE PHONE NUMBER</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
</resources>